--- a/index.html
+++ b/index.html
@@ -48,7 +48,40 @@
             </div>
         </div>
         <div id="map-details-right">
-            <img src="" alt="google maps"/>            
+            <img class="map-fix" src="" alt="google maps"/>            
+        </div>
+        <!--<div class="clear-both"></div>-->
+    </div>
+    
+    <!-- Div to edit the property details-->
+    <div class="edit-property-details">
+        <div class="property-info">
+            <form action="" method="">
+                <div class="form-group">
+                    <label for="">Title :</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label for="">Address:</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label for="">Owner:</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label for="">Latitude:</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label for="">Longitude:</label>
+                    <input type="text" class="form-control"/>
+                </div>
+            </form>
+        </div>
+        <div class="edit-control-btn">
+            <button type="button">Cancel</button>
+            <button type="button">Save</button>
         </div>
     </div>
   </body>
