--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="ng-maps">
   <head>
-    <LINK href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <script src="controller/ng-maps.js"></script>
   </head>
   <body>
       <!-- Div to show the place list-->
-    <div id="place-list">
+    <div class="place-list" ng-controller="PropertyListController as propertyList">
       <button type="button" id="addNewPlaceBtn">+ Add New</button>
       <table>
           <tr>
@@ -19,6 +20,17 @@
               <th>
                   Owner
               </th>
+          </tr>
+          <tr ng-repeat="property in propertyList.properties">
+              <td>
+                  {{property.name}}
+              </td>
+              <td>
+                  {{property.address}}
+              </td>
+              <td>
+                  {{property.owner.name}}
+              </td>
           </tr>
       </table>
     </div>
@@ -55,34 +67,34 @@
     
     <!-- Div to edit the property details-->
     <div class="edit-property-details">
-        <div class="property-info">
-            <form action="" method="">
-                <div class="form-group">
-                    <label for="">Title :</label>
-                    <input type="text" class="form-control"/>
-                </div>
-                <div class="form-group">
-                    <label for="">Address:</label>
-                    <input type="text" class="form-control"/>
-                </div>
-                <div class="form-group">
-                    <label for="">Owner:</label>
-                    <input type="text" class="form-control"/>
-                </div>
-                <div class="form-group">
-                    <label for="">Latitude:</label>
-                    <input type="text" class="form-control"/>
-                </div>
-                <div class="form-group">
-                    <label for="">Longitude:</label>
-                    <input type="text" class="form-control"/>
-                </div>
-            </form>
-        </div>
-        <div class="edit-control-btn">
-            <button type="button">Cancel</button>
-            <button type="button">Save</button>
-        </div>
+        <form>
+            <div class="property-info">
+                    <div class="form-group">
+                        <label for="">Title :</label>
+                        <input type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Address:</label>
+                        <input type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Owner:</label>
+                        <input type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Latitude:</label>
+                        <input type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Longitude:</label>
+                        <input type="text" class="form-control"/>
+                    </div>
+            </div>
+            <div class="edit-control-btn">
+                <button type="button">Cancel</button>
+                <button type="button">Save</button>
+            </div>
+        </form>
     </div>
   </body>
 </html>
