--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
     <script src="controller/ng-maps.js"></script>
   </head>
-  <body>
+  <body ng-controller="PropertyListController as propertyList">
       <!-- Div to show the place list-->
-    <div class="place-list" ng-controller="PropertyListController as propertyList">
+    <div class="place-list" >
       <button type="button" id="addNewPlaceBtn">+ Add New</button>
       <table>
           <tr>
@@ -23,7 +23,7 @@
           </tr>
           <tr ng-repeat="property in propertyList.properties">
               <td>
-                  {{property.name}}
+                  <u ng-click="propertyList.showPropertyDetails(property);">{{property.name}}</u>
               </td>
               <td>
                   {{property.address}}
@@ -39,24 +39,24 @@
     <div id="place-details">
         <div id="place-details-left">
             <div class="details-heading">
-                <h4>Tokyo apartment with view</h4>    
+                <h4>{{propertyList.propertyDetailName}}</h4>    
             </div>
             <div class="estate-details">
                 <div class="address">
-                    Address :
+                    Address : {{propertyList.propertyDetailAddress}}
                 </div>
                 <div class="owner">
-                    Owner :
+                    Owner :   {{propertyList.propertyDetailOwner}}
                 </div> 
                 <div class="Latitude">
-                    Address :
+                    Latitude :  {{propertyList.propertyDetailCoordinatesLatitude}}
                 </div>
                 <div class="Longitude">
-                    Owner :
+                    Longitude : {{propertyList.propertyDetailCoordinatesLongitude}}
                 </div> 
             </div>
             <div class="edit-details">
-                <u><a>Edit</a></u>
+                <u ng-click="propertyList.editPropertyDetails();">Edit</u>
             </div>
         </div>
         <div id="map-details-right">
@@ -67,32 +67,47 @@
     
     <!-- Div to edit the property details-->
     <div class="edit-property-details">
-        <form>
+        <form ng-submit="propertyList.addProperty()">
             <div class="property-info">
                     <div class="form-group">
                         <label for="">Title :</label>
-                        <input type="text" class="form-control"/>
+                        <input 
+                            type="text"
+                            ng-model="propertyList.propertyModel.name"
+                            class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label for="">Address:</label>
-                        <input type="text" class="form-control"/>
+                        <input 
+                            type="text"
+                            ng-model="propertyList.propertyModel.address"
+                            class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label for="">Owner:</label>
-                        <input type="text" class="form-control"/>
+                        <input 
+                            type="text" 
+                            ng-model="propertyList.propertyModel.owner.name"
+                            class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label for="">Latitude:</label>
-                        <input type="text" class="form-control"/>
+                        <input 
+                            type="text" 
+                            ng-model="propertyList.propertyModel.coordinates.latitude"
+                            class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label for="">Longitude:</label>
-                        <input type="text" class="form-control"/>
+                        <input 
+                            type="text" 
+                            ng-model="propertyList.propertyModel.coordinates.longitude"
+                            class="form-control"/>
                     </div>
             </div>
             <div class="edit-control-btn">
-                <button type="button">Cancel</button>
-                <button type="button">Save</button>
+                <button type="button" ng-click="propertyList.btnCancel();">Cancel</button>
+                <button type="submit">Save</button>
             </div>
         </form>
     </div>
