--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js"></script>
     <script src="controller/ng-maps.js"></script>
   </head>
   <body ng-controller="PropertyListController as propertyList">
@@ -60,7 +61,8 @@
             </div>
         </div>
         <div id="map-details-right">
-            <img class="map-fix" src="" alt="google maps"/>            
+            <!--<img class="map-fix" src="" alt="google maps"/>            -->
+            <div id="map"></div>
         </div>
         <!--<div class="clear-both"></div>-->
     </div>
