control visibility of property details and the form

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     
     <!-- Div to edit the property details-->
-    <div class="edit-property-details">
+    <div class="edit-property-details" id="property-details-form">
         <form ng-submit="propertyList.addProperty()">
             <div class="property-info">
                     <div class="form-group">
